config/gcsweb/cluster/gcsweb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: gcsweb
  name: gcsweb-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gcsweb-bashfire-dev-ip
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-issuer
spec:
  tls:
  - secretName: gcsweb-bashfire-dev-tls
    hosts:
    - gcsweb.bashfire.dev
  rules:
  - host: gcsweb.bashfire.dev
    http:
      paths:
      - path: /*
        backend:
          serviceName: gcsweb
          servicePort: http
